# roboot

./: .allowed_signers  .env.example  .gitignore  CHANGELOG.md  CHANGELOG.zh.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  MOBILE_QUICKSTART.md  README.md  README.zh.md  SECURITY.md  app.py  auth.py  chainlit_app.py  chat_handler.py  chat_store.py  config.example.yaml  filevault_status.py  identity.py  iterm_bridge.py  mcp_bootstrap.py  memory.py  network_utils.py  proactive.py  pyproject.toml  relay_client.py  run.py  self_upgrade.py  server.py  session_watcher.py  soul.md  soul_review.py  test_mobile_access.py  text_utils.py  tool_guard.py  tts_synth.py
.chainlit/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: test.yml
adapters/: __init__.py  keyboard.py  stt_whisper.py  telegram_bot.py  tts_streamer.py  voice.py  voice_prefs.py
adapters/stt/: __init__.py  __main__.py  base.py  google.py  mlx.py  noop.py
docs/: REMOTE_VS_LOCAL.md  TESTING.md  USAGE.md  USAGE.zh.md  centralized-relay-design.md  cloudflare-tunnel-guide.md  mobile-access.md  ngrok-guide.md  remote-access-comparison.md  ssl-trust-guide.md
evolution/: __init__.py
relay/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
relay/src/: index.ts  pair-page.ts  relay-session.ts
relay/test/: test-relay.ts
scripts/: run.sh  setup.sh
specs/mobile-access/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  implementation-plan.md  testing-checklist.md
specs/secure-mobile-access/: requirements.md
static/: console.html  dashboard.html  generate_icons.py  index.html  manifest.json  session.html  sw.js
tests/: README.md  conftest.py  test_chat_handler.py  test_chat_search.py  test_chat_store.py  test_files.py  test_filevault_status.py  test_generate_cert.py  test_history_replay.py  test_identity.py  test_import_without_vision_extras.py  test_lan_auth.py  test_mcp_bootstrap.py  test_proactive.py  test_relay_crypto.py  test_scheduler.py  test_self_feedback.py  test_self_upgrade.py  test_session_watcher.py  test_setup_script.py  test_signed_tag_gate.py  test_soul_context.py  test_soul_gate_integration.py  test_soul_review.py  test_stt_backends.py  test_text_utils.py  test_todos.py  test_tool_guard.py  test_tool_guard_integration.py  test_tool_guard_telegram.py  test_tts_streamer.py  test_tts_synth.py  test_voice_prefs.py  test_voice_switch.py  test_web.py
tools/: __init__.py  chat_search.py  claude_code.py  face_db.py  files.py  generate_cert.py  scheduler.py  shell.py  soul.py  todos.py  vision.py  voice_switch.py  web.py
