[project]
name = "roboot"
version = "0.1.0"
description = "Personal AI agent hub — voice, terminal, Claude Code management"
requires-python = ">=3.11"
dependencies = [
    "arcana-agent[all-providers]>=0.4.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qrcode[pil]>=7.4.0",
    "websockets>=12.0",
    "cryptography>=42.0",
    "iterm2>=2.7",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
]
vision = [
    "opencv-python>=4.9.0",
    "face_recognition>=1.3",
]
telegram = [
    "python-telegram-bot>=21.0",
    # Default STT backend: Apple-Silicon-native Whisper. On Intel Macs /
    # Linux, set `voice.stt.backend: google` in config.yaml — that backend
    # uses `SpeechRecognition` from the `voice` extra (install with
    # `pip install roboot[voice,telegram]`).
    "mlx-whisper>=0.4; platform_machine=='arm64' and sys_platform=='darwin'",
    "roboot[voice]",
]
desktop = [
    "pywebview>=5.0",
]
all = [
    "roboot[voice,vision,telegram,desktop]",
]

[project.scripts]
roboot = "run:main"

[tool.setuptools]
packages = ["adapters", "tools", "evolution"]
py-modules = [
    "app",
    "chat_handler",
    "chat_store",
    "identity",
    "iterm_bridge",
    "network_utils",
    "relay_client",
    "run",
    "server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
