[project]
name = "roboot"
version = "0.1.0"
description = "Personal AI agent hub — voice, terminal, Claude Code management"
requires-python = ">=3.11"
dependencies = [
    "arcana-agent[all-providers]>=0.8.2,<0.9",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "qrcode[pil]>=7.4.0",
    "websockets>=12.0",
    "cryptography>=42.0",
    "iterm2>=2.7",
    "edge-tts>=6.1",
]

[project.optional-dependencies]
voice = [
    "SpeechRecognition>=3.10.0",
    "pyaudio>=0.2.14",
]
vision = [
    "opencv-python>=4.9.0",
    "face_recognition>=1.3",
]
telegram = [
    "python-telegram-bot>=21.0",
    # Default STT backend: Apple-Silicon-native Whisper. ~3 GB model,
    # offline after first prewarm. Intel Mac / Linux users flip
    # `voice.stt.backend: google` in config.yaml instead.
    "mlx-whisper>=0.4; platform_machine=='arm64' and sys_platform=='darwin'",
    # Google STT fallback — needed for `voice.stt.backend: google`. We only
    # use `sr.AudioFile` + recognize_google, so pyaudio (portaudio system
    # dep) is NOT required; it lives in the `voice` extra for CLI mic mode.
    "SpeechRecognition>=3.10.0",
]
desktop = [
    "pywebview>=5.0",
]
all = [
    "roboot[voice,vision,telegram,desktop]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
roboot = "run:main"

[tool.setuptools]
packages = ["adapters", "tools", "evolution"]
py-modules = [
    "app",
    "chat_handler",
    "chat_store",
    "identity",
    "iterm_bridge",
    "network_utils",
    "relay_client",
    "run",
    "server",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
